# mte7101-proj1

./: .gitignore  LICENSE  Makefile  README.md
data/: sphere_tracer.fs  sphere_tracer.vs
doc/: .chktexrc  .gitignore  Makefile  glslListings.sty  mte7101.tex  pdflatex-color.sh  template.tex
doc/img/: Makefile  phong_illustration.asy  phong_illustration.ggb  prototype_class_diagram.graphml  prototype_shaders.graphml  ray_marching_problems.ggb  ray_marching_problems.ipe  ray_tracing_illustration.ggb  ray_tracing_tree.graphml  ray_tracing_tree_schematic.graphml  sphere_tracing_principle.ggb  sphere_tracing_principle_1.ggb  sphere_tracing_principle_1.ipe  sphere_tracing_principle_2.ggb  sphere_tracing_principle_2.ipe  sphere_tracing_principle_3.ggb  sphere_tracing_principle_3_0.ipe  sphere_tracing_principle_3_1.ipe  sphere_tracing_principle_3_2.ipe
doc/inc/: 10_introduction.tex  20_administrative.tex  30_scope.tex  40_procedure.tex  50_theoretical_background.tex  51_illumination_models.tex  52_surfaces.tex  60_conclusion.tex  60_surfaces.tex  70_prototype.tex  80_conclusion.tex  attachment.tex  bibliography.bib  doc_title.tex  glossary.tex  title.tex  version.tex  versions.tex
doc/inc/50/: 51_illumination_models.tex  52_shading.tex
doc/inc/50/51/: global_illum_models.tex  local_illum_models.tex  ray_casting.tex  ray_casting_tracing.tex  ray_tracing.tex
doc/inc/60/: 61_surfaces.tex  62_description_implicit_surfaces.tex  63_rendering_implicit_surfaces.tex
doc/inc/60/62/: operations.tex  primitives.tex  ray_marching.tex  sphere_tracing.tex
doc/inc/60/63/: lighting_model.tex  rendering.tex  shadows.tex
doc/inc/70/: architecture.tex  components.tex  realization.tex
doc/inc/80/: further_work.tex
doc/inc/static/: abstract.tex  attachment.tex  bibliography.bib  current_version.tex  doc_title.tex  glossary.tex  management_summary.tex  title.tex  versions.tex
doc/inc/static/attachment/: 10_meeting_minutes.tex
doc/inc/static/attachment/minutes/: 20150921  20150921.rst  20151004  20151004.rst  20151005  20151011  20151011.rst  20151018  20151018.rst  20151025  20151025.rst  20151102  20151102.rst  20151115  20151115.rst  20151206  20151206.rst  20160125.rst
src/: CMakeLists.txt  fatal_exception.hpp  main.cpp  main.hpp  shader.cpp  shader.hpp  shader_factory.cpp  shader_factory.hpp
